[package]
name = "board_plugin"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
# Engine
bevy = "0.16.1"

# Serialization
serde = "1.0"

# Random
rand = "0.9.2"

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.33.1", optional = true }
